<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMS2Gmail</string>
	<!-- preference -->
	<string name="activated_key">activated</string>
	<string name="activated_title">Activated</string>
	<string name="account_key">account</string>
	<string name="account_title">Account</string>
	<string name="select_account_title">Select account</string>
	<string name="password_key">password</string>
	<string name="password_title">Gmail password</string>
	<string name="phone_subject_key">phone_subject</string>
	<string name="phone_subject_title">Phone subject</string>
	<string name="phone_subject_default">New incoming phone</string>
	<string name="sms_subject_key">sms_subject</string>
	<string name="sms_subject_title">SMS subject</string>
	<string name="sms_subject_default">New incoming SMS</string>
	<string name="reply_sms_key">reply_sms</string>
	<string name="reply_sms_title">Reply via SMS</string>
	<string name="reply_body_key">reply_body</string>
	<string name="reply_body_title">Reply text</string>
	<string name="reply_body_default">Sory, call later.</string>
	<!-- password dialog -->
	<string name="password_dialog_ok_button_label">OK</string>
	<string name="password_dialog_cancel_button_label">Cancel</string>
</resources>