<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference android:key="@string/activated_key"
        android:title="@string/activated_title"/>
    <ListPreference android:key="@string/account_key"
        android:title="@string/account_title"
        android:dialogTitle="@string/select_account_title"/>
    <EditTextPreference android:key="@string/password_key"
        android:title="@string/password_title"
        android:dialogTitle="@string/password_title"
        android:password="true" />
    <EditTextPreference android:key="@string/phone_subject_key"
        android:title="@string/phone_subject_title"/>
    <EditTextPreference android:key="@string/sms_subject_key"
        android:title="@string/sms_subject_title" />
    <CheckBoxPreference android:key="@string/reply_sms_key"
        android:title="@string/reply_sms_title" />
    <EditTextPreference android:key="@string/reply_body_key"
        android:title="@string/reply_body_title" />
</PreferenceScreen>
